--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "color": "^3.1.2",
-    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "tailwindcss": "^1.4.6"
   }
 }
