Tweak: Change package name and publish to npm under new account / name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwindcss-neumorphism",
+  "name": "tw-neumorphism",
   "version": "0.2.0",
   "description": "Generate soft UI CSS code using tailwindcss",
   "main": "index.js",
